# icarus_numu_ml_selection

./: .gitignore  README.md  analysis.C  data.C  montecarlo.C  requirements.txt
include/: analysis.h  container.h  csv_maker.h  cuts.h  definitions.h  numu_variables.h  variables.h
plotting/: __init__.py  make_plots.py  plot_configurations.yml  plot_funcs.py  plot_style.mplstyle
plotting/plot_configurations/: basic.toml  confusion.toml  flow_charts.toml  kinematics.toml  reco_1mu1p.toml  reco_1muNp.toml  reco_1muX.toml
systematics/: __init__.py  syscalc.py  sysplot.py  systools.py
systematics/configurations/: systematics.toml  systematics_detector_only.toml  systematics_reweightable_only.toml  variables.toml
systematics/cpp/: CMakeLists.txt
systematics/cpp/include/: reweight.h  types.h  utilities.h  variation.h  vars.h
systematics/cpp/src/: main.cc
